調整 $http 的使用效能，避免不必要的要求存取
將所有 $http 要求都加上快取機制，避免重複載入資料

--- a/album.html
+++ b/album.html
@@ -76,14 +76,14 @@
 
 			$scope.albums = [];
 
-			$http.get(API_SERVER+"albums/?accessToken="+API_KEY).success(function(results) {
+			$http({url: API_SERVER+"albums/?accessToken="+API_KEY, cache: true}).success(function(results) {
 				console.log(results);
 				$scope.albums = results.data;
 				$scope.clickOnAlbum(results.data[0].id);
 			});
 
 			$scope.clickOnAlbum = function(album_id) {
-				$http.get(API_SERVER+"albums/"+album_id+"?accessToken="+API_KEY).success(function(results) {
+				$http({url: API_SERVER+"albums/"+album_id+"?accessToken="+API_KEY, cache: true}).success(function(results) {
 					console.log(results);
 					$scope.album = results.data;
 				});
