--- a/video.html
+++ b/video.html
@@ -74,7 +74,7 @@
 
 		app.controller('MainCtrl', ['$scope', '$http', '$sce', function($scope, $http, $sce){
 			$scope.categories = {};
-			$http.get(API_SERVER+"videos/?accessToken="+API_KEY).success(function(results) {
+			$http({url: API_SERVER+"videos/?accessToken="+API_KEY, cache: true}).success(function(results) {
 				console.log(results);
 				var initial_category_id;
 				angular.forEach(results.data,function(item,ind){
@@ -86,7 +86,7 @@
 			});
 
 			$scope.clickOnCategory = function(category_id) {
-				$http.get(API_SERVER+"videos/"+category_id+"?accessToken="+API_KEY).success(function(results) {
+				$http({url: API_SERVER+"videos/"+category_id+"?accessToken="+API_KEY, cache: true}).success(function(results) {
 					console.log(results);
 					var initial_playlist;
 					$scope.categories[category_id].videos = [];
