--- a/index.html
+++ b/index.html
@@ -10,12 +10,37 @@
 	.category,.article{	
 		cursor:pointer;
 	}
+
+	ul {
+		font-size: 22px;
+	}
+
+	ul:hover {
+		background-color: hsla(120,80%,100%,0.2);
+	}
+
+	ul>li {
+		margin-top: 5px;
+	}
+
+	ul>li:hover {
+		text-decoration: underline;
+	}
+
 	</style>
 </head>
-<body ng-controller="MainCtrl as main">
-	<header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+<body ng-controller="MainCtrl as main" id="skrollr-body"
+	>
+	<header class="navbar navbar-static-top bs-docs-nav"
+			id="top" role="banner"
+
+				data-0 = "position:fixed; top:-50px; font-size: 11px;"
+				data-500 = "position:fixed; top:0px; font-size: 16px;"
+	>
 		<div class="container">
+
 			<div class="navbar-header">
+
 				<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -45,19 +70,52 @@
 			</nav>
 		</div>
 	</header>
-	<div class="container">
+
+	<div class="container" data-0="position: fixed;">
 		
-		<div class="col-md-4">
-			<h2> 文章類別目錄</h2>
-			<ul class="categories">
-				<li class='category' ng-repeat="(key, item) in main.categories" ng-click="main.clickOnCategory(item.id)">{{item.name}}
+		<div class="col-md-4"
+			style = "height:70%; overflow:auto;"
+				data-0 = "position: fixed; top:60px; left:10px;
+						background-color: hsla(120,20%,80%,1)"
+				data-1000 = "top:60px; left:20px;
+						background-color: hsla(60,20%,80%,1)">
+
+			<h2
+				data-0 = "font-size:18px;"
+				data-1000 = "font-size:36px;" >文章類別目錄</h2>
+			<ul class="categories"
+
+				<li class='category'
+
+				ng-repeat="(key, item) in main.categories"
+				ng-click="main.clickOnCategory(item.id)"
+
+				style = "cursor:pointer;"
+
+				>
+
+				{{item.name}}
 					<ul class='articles'>
-						<li class='article' ng-repeat="(key, article) in item.posts" ng-click="main.clickOnArticle($event, article)">{{article.title}}</li>
+						<li class='article' ng-repeat="(key, article) in item.posts"
+
+						ng-click="main.clickOnArticle($event, article)">{{article.title | showTitle}}</li>
 					</ul>
 				</li>
 			</ul>
 		</div>
-		<div class="page col-xs-12 col-sm-6 col-md-8 col-xs-6" ng-bind-html="main.content">
+		<div class="page col-xs-12 col-sm-6 col-md-8 col-xs-6"
+
+				data-0 = "position: fixed;
+							top:60px; right:30px;
+							height: 70%;
+							width: 50%;
+							overflow:auto;
+							font-size:22px;line-height: 44px;
+							background-color: hsla(60,70%,95%,1)"
+
+				data-end = "right:40px; font-size:36px; line-height:72px;"
+
+				ng-bind-html="main.content">
 			
 		</div>
 	</div>
@@ -65,5 +123,9 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>	
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular-route.min.js"></script>		
 	<script src="app.js"></script>
+	<script src="skrollr.min.js"></script>
+
+	<script src="index.js"></script>
+
 </body>
 </html>
