--- a/album.html
+++ b/album.html
@@ -14,6 +14,14 @@
 		.photo{
 			padding:4px;
 		}
+
+		ul>li {
+			color: hsla(120,15%,50%,1);
+		}
+
+		ul>li:hover {
+			text-decoration: underline;
+		}
 	</style>
 </head>
 <body>
@@ -51,16 +59,23 @@
 	</header>
 	<div class="container"  ng-controller="AlbumCtrl as album">
 		
-		<div class="col-md-4">
+		<div class="col-md-4" style = "height:75%; overflow:auto;">
 			<h2> 相簿目錄</h2>
 			<ul class="categories">
-				<li class='album' ng-repeat="item in album.albums" ng-click="album.clickOnAlbum(item.id)">{{item.title}}</li>
+				<li class='album' ng-repeat="item in album.albums"
+				ng-click="album.clickOnAlbum(item.id);"
+				>
+
+					{{item.title}}</li>
 			</ul>
 		</div>
-		<div class="photo-container col-xs-12 col-sm-6 col-md-8 col-xs-6 ">
+
+
+		<div id = "main" class="photo-container col-xs-12 col-sm-6 col-md-8 col-xs-6 " style = "height:75%; overflow:auto;">
 			<h2>{{album.set.title}}</h2>
+
 			<ul class="photos row">
-				<li class="col-md-4 photo" ng-repeat="item in album.album.photos"><a target="_blank" ng-href="{{item.link}}"><img class="img-rounded img-responsive" ng-src="{{item.images.medium}}"/></a></li>
+				<li class="col-md-12 photo" ng-repeat="item in album.album.photos"><a target="_blank" ng-href="{{item.link}}"><img class="img-rounded img-responsive" ng-src="{{item.images.medium}}"/></a></li>
 			</ul>
 		</div>
 	</div>
@@ -68,5 +83,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.22/angular-route.min.js"></script>	
 	<script src="app.js"></script>	
+
+
 </body>
 </html>
